--- a/style.scss
+++ b/style.scss
@@ -157,7 +157,7 @@ a:focus {
 }
 
 .custom_nav-container .nav_search-btn {
-  background-image: url(../images/search-icon.png);
+  background-image: url(https://sofarent.github.io/planetfuture.github.io/images/search-icon.png);
   background-size: 17px;
   background-repeat: no-repeat;
   background-position-y: 7px;
